# epidemia

./: .env.example  .gitignore  Dockerfile.mcp-brasil  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
api/: .dockerignore  .env.example  Dockerfile.api  Dockerfile.worker  Makefile  README.md  pyproject.toml
api/sql/: 001_init_postgis.sql
api/src/: config.py  main.py
api/src/db/: qdrant.py
api/src/routers/: health.py
web/: .env.example  README.md  package.json  pnpm-lock.yaml
web/app/: layout.tsx
web/providers/: index.tsx  query-provider.tsx
web/stores/: use-sidebar-store.ts
web/types/: index.ts  next-auth.d.ts
